@@ -9,6 +9,7 @@ OPENSEADRAGON CHANGELOG
 * The "page" event is now fired after the page index has been updated (#1330)
 * Added option pixelsPerArrowPress that sets the speed of arrow keys (#1364)
 * Improved IIIF options.maxLevel calculation (#1401)
+* Added canvas-key events, along with the ability to cancel key actions (#1414)
 
 2.3.1:
 
